@@ -558,6 +558,9 @@ Release 2.4.0 - UNRELEASED
     YARN-1776. Fixed DelegationToken renewal to survive RM failover. (Zhijie
     Shen via jianhe)
 
+    YARN-1577. Made UnmanagedAMLauncher do launchAM after the attempt reaches
+    the LAUNCHED state. (Jian He via zjshen)
+
 Release 2.3.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
